horizontally aligned the todo check list items

--- a/ch1/style.css
+++ b/ch1/style.css
@@ -44,6 +44,7 @@ div.list ul li {
 	padding: 10px;
 	border-bottom: 3px solid #666;
 	display: grid;
+	align-items: center;
 	grid-template-columns: 1fr 8fr 1fr;
 	width: 100%;
 }
